--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ footer {
   
   @media (min-width: 500px) {
     main {
-      max-width: 400px;
+      max-width: 80%;
       margin: 50px auto;
     }
   
@@ -48,4 +48,36 @@ footer {
     padding-top: 0.5em;
     display: block;
   }
-  
+  .mathquill4quill-operator-container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.mathquill4quill-operator-button {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  border: 1px solid black;
+    text-align: center;
+    width: 45px;
+    height: 45px;
+    background: #fff;
+    border-radius: 5px;
+    color: #000;
+    padding: 0;
+    font-size: 1rem;
+    text-transform: none;
+    cursor: pointer;
+}
+.ql-tooltip.ql-editing {
+  top: 6vh;
+  margin: auto;
+  right: 0% !important;
+  left: 0% !important;
+  width: 80%;
+}
